; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableColumnPartSetTextColor.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableColumnPartSetTextColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.tablePart = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiTableColumnPartSetTextColor(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.tablePart*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i64 @g_ptr_array_index(i32 %10, i32 %11)
  %13 = inttoptr i64 %12 to %struct.tablePart*
  store %struct.tablePart* %13, %struct.tablePart** %7, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.tablePart*, %struct.tablePart** %7, align 8
  %16 = getelementptr inbounds %struct.tablePart, %struct.tablePart* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i64 @g_ptr_array_index(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
